apps/cli/sfdc-package/force-app/main/default/objects/Route_Criteria__c/Route_Criteria__c.object-meta.xml
<CustomObject>
    <description>Stores pre-callout trigger criteria for routing rules. Queried by CriteriaEvaluator inside @future to filter records before the engine callout.</description>
    <label>Route Criteria</label>
    <nameField>
        <displayFormat>RC-{0000000}</displayFormat>
        <label>Route Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>