apps/cli/sfdc-package/force-app/main/default/objects/Route_Criteria__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>