apps/cli/sfdc-package/force-app/main/default/objects/Route_Criteria__c/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <label>Group ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>