apps/cli/sfdc-package/force-app/main/default/objects/Route_Criteria__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>