apps/cli/sfdc-package/force-app/main/default/objects/Route_Criteria__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>30</length>
    <type>Text</type>
</CustomField>